--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,7 @@ version: 2.0
 jobs:
   build_gcc_latest:
     docker:
-      - image: gcc:latest
-      - image: cmake:latest
+      - image: gcc-cmake:latest
 
     steps:
       - checkout
