--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,18 +1,26 @@
-version: 2.0
+version: 2
 jobs:
-  build_gcc_latest:
+  gcc_8_default:
     docker:
-      - image: gcc-cmake:latest
-
+      - image: lasote/conangcc8
+    working_directory: ~/arm_thing
     steps:
+      - run: sudo apt-get update
+      - run: sudo apt-get install --assume-yes libbz2-dev libpng-dev libfreetype6-dev libz-dev git
       - checkout
-      - run: mkdir build && cd build
+      - run: pwd
+      - run: gcc-8 --version
+      - run: cmake --version
+      - run: conan --version
+      - run: export CXX=`which g++-8`
+      - run: export CC=`which gcc-8`
+      - run: mkdir build
+      - run: cd build
       - run: cmake ..
-      - run: make -j8
+      - run: make
       - run: make test
-
 workflows:
   version: 2
-  build_and_test:
+  workflow:
     jobs:
-      - build_gcc_latest
+    - gcc_8_default
