[ circleci ] i hate ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,11 @@ jobs:
       - run: export CXX=`which g++-8`
       - run: export CC=`which gcc-8`
       - run: mkdir build
-      - run: cd build
-      - run: cmake ..
-      - run: make
-      - run: make test
+      - run: cd build; conan remote add bincrafters https://api.bintray.com/conan/bincrafters/public-conan 
+      - run: cd build; conan install .. --build missing
+      - run: cd build; cmake ..
+      - run: cd build; VERBOSE=1 cmake --build . -- -j2
+      - run: cd build; ctest -j2
 workflows:
   version: 2
   workflow:
