--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ addons:
       - gcc-7
       - g++-7
       - cmake
+      - lcov
 
 script:
   - export CC=/usr/bin/gcc-7
@@ -22,7 +23,13 @@ script:
   - make test
 
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  # Creating report
+  - cd ${TRAVIS_BUILD_DIR}
+  - lcov --directory . --capture --output-file coverage.info # capture coverage info
+  - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system
+  - lcov --list coverage.info #debug info
+  # Uploading report to CodeCov
+  - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
 
 notifications:
   email:
