--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,13 +2,16 @@ cmake_minimum_required(VERSION 3.5)
 project(nyx)
 
 set(CMAKE_CXX_STANDARD 17)
-set(NYX_SRC nyx/Builtin.cpp nyx/Interpreter.cpp nyx/Main.cpp nyx/Parser.cpp nyx/Ast.cpp nyx/Utils.cpp nyx/Nyx.cpp)
+set(NYX_SRC nyx/Builtin.cpp nyx/Interpreter.cpp nyx/Main.cpp nyx/Parser.cpp nyx/Utils.cpp nyx/Nyx.cpp)
 
+
+# Nyx compiler
 add_executable(nyx ${NYX_SRC})
 
 enable_testing()
 file(GLOB test_file_namea ${PROJECT_SOURCE_DIR}/nyx_test/interesting/*.nyx)
 
+# Create unit tests
 foreach(each_file ${test_file_namea})
  string(REGEX REPLACE ".*/(.*)\.nyx" "\\1" curated_name ${each_file})
     add_test(NAME interesting_${curated_name} COMMAND nyx ${each_file})
