[ refactor ] shorten types

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 file(GLOB NYX_SRC nyx/**.cpp)
 
 # Nyx compiler
-add_executable(nyx ${NYX_SRC})
+add_executable(nyx ${NYX_SRC} nyx/Debug.cpp nyx/Debug.cpp nyx/Debug.hpp)
 
 enable_testing()
 file(GLOB test_file_namea ${PROJECT_SOURCE_DIR}/nyx_test/example/*.nyx)
